infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:15
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-postgres-srv # postgres-data
              mountPath: /var/lib/postgresql/data
      # volumes:
      #   - name: postgres-data
      #     emptyDir: {}
      volumes:
        - name: auth-postgres-srv
          persistentVolumeClaim:
            claimName: auth-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
