infra/k8s/nlp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp
  template:
    metadata:
      labels:
        app: nlp
    spec:
      containers:
        - name: nlp
          image: niloyrudra/nlp-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: nlp-srv
spec:
  selector:
    app: nlp
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
