infra/k8s/speaking-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speaking-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speaking
  template:
    metadata:
      labels:
        app: speaking
    spec:
      containers:
        - name: speaking
          image: niloyrudra/speaking
---
apiVersion: v1
kind: Service
metadata:
  name: speaking-srv
spec:
  selector:
    app: speaking
  ports:
    - name: speaking
      protocol: TCP
      port: 4004
      targetPort: 4004
