infra/k8s/streaks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaks-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaks
  template:
    metadata:
      labels:
        app: streaks
    spec:
      # <<< ADD INIT CONTAINER HERE
      containers:
        - name: streaks
          image: niloyrudra/streaks
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5


          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: streaks-srv
spec:
  selector:
    app: streaks
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  # type: ClusterIP
