infra/k8s/unit-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unit-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unit
  template:
    metadata:
      labels:
        app: unit
    spec:
      containers:
        - name: unit
          image: niloyrudra/unit
---
apiVersion: v1
kind: Service
metadata:
  name: unit-srv
spec:
  selector:
    app: unit
  ports:
    - name: unit
      protocol: TCP
      port: 4001
      targetPort: 4001
